manifests/app/prometheus/base/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-k8s
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: prometheus-k8s-tls
spec:
  ports:
    - name: https
      port: 9091
      protocol: TCP
      targetPort: https
  selector:
    app: prometheus
