manifests/app/prometheus/base/prometheus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    operated-prometheus: "true"
  name: prometheus-k8s
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: prometheus-k8s
    weight: 100
  wildcardPolicy: None
